<?xml version="1.0"?>
<package>
  <name>hi226_imu</name>
  <version>1.0.0</version>
  <description>The Hi226_Imu package</description>
  <maintainer email="a@a.com">***</maintainer>

  <author>***</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>roscpp</buildtool_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <buildtool_depend>sensor_msgs</buildtool_depend>
  <buildtool_depend>tf</buildtool_depend>
  <buildtool_depend>cmake_modules</buildtool_depend>

  <run_depend>catkin</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <export>
  </export>
</package>
